export const snapshot = {};

snapshot[`isLiteralOneOf<T> > returns properly named function 1`] = `'isLiteralOneOf(["hello", "world"])'`;

snapshot[`isReadonlyUniformTupleOf<T> > returns properly named function 1`] = `"isReadonlyUniformTupleOf(3, isAny)"`;

snapshot[`isReadonlyUniformTupleOf<T> > returns properly named function 2`] = `"isReadonlyUniformTupleOf(3, isNumber)"`;

snapshot[`isReadonlyUniformTupleOf<T> > returns properly named function 3`] = `"isReadonlyUniformTupleOf(3, (anonymous))"`;

snapshot[`isReadonlyTupleOf<T> > returns properly named function 1`] = `
"isReadonlyTupleOf([
  isNumber,
  isString,
  isBoolean
])"
`;

snapshot[`isReadonlyTupleOf<T> > returns properly named function 2`] = `"isReadonlyTupleOf([(anonymous)])"`;

snapshot[`isReadonlyTupleOf<T> > returns properly named function 3`] = `
"isReadonlyTupleOf([
  isReadonlyTupleOf([
    isReadonlyTupleOf([
      isNumber,
      isString,
      isBoolean
    ])
  ])
])"
`;

snapshot[`isArrayOf<T> > returns properly named function 1`] = `"isArrayOf(isNumber)"`;

snapshot[`isArrayOf<T> > returns properly named function 2`] = `"isArrayOf((anonymous))"`;

snapshot[`isObjectOf<T> > returns properly named function 1`] = `
"isObjectOf({
  a: isNumber,
  b: isString,
  c: isBoolean
})"
`;

snapshot[`isObjectOf<T> > returns properly named function 2`] = `"isObjectOf({a: a})"`;

snapshot[`isObjectOf<T> > returns properly named function 3`] = `
"isObjectOf({
  a: isObjectOf({
    b: isObjectOf({c: isBoolean})
  })
})"
`;

snapshot[`isSetOf<T> > returns properly named function 1`] = `"isSetOf(isNumber)"`;

snapshot[`isSetOf<T> > returns properly named function 2`] = `"isSetOf((anonymous))"`;

snapshot[`isRecordOf<T, K> > returns properly named function 1`] = `"isRecordOf(isNumber, isString)"`;

snapshot[`isRecordOf<T, K> > returns properly named function 2`] = `"isRecordOf((anonymous), isString)"`;

snapshot[`isMapOf<T, K> > returns properly named function 1`] = `"isMapOf(isNumber, isString)"`;

snapshot[`isMapOf<T, K> > returns properly named function 2`] = `"isMapOf((anonymous), isString)"`;

snapshot[`isInstanceOf<T> > returns properly named function 1`] = `"isInstanceOf(Date)"`;

snapshot[`isInstanceOf<T> > returns properly named function 2`] = `"isInstanceOf((anonymous))"`;

snapshot[`isRecordOf<T> > returns properly named function 1`] = `"isRecordOf(isNumber, undefined)"`;

snapshot[`isRecordOf<T> > returns properly named function 2`] = `"isRecordOf((anonymous), undefined)"`;

snapshot[`isMapOf<T> > returns properly named function 1`] = `"isMapOf(isNumber, undefined)"`;

snapshot[`isMapOf<T> > returns properly named function 2`] = `"isMapOf((anonymous), undefined)"`;

snapshot[`isReadonlyTupleOf<T, E> > returns properly named function 1`] = `
"isReadonlyTupleOf([
  isNumber,
  isString,
  isBoolean
], isArray)"
`;

snapshot[`isReadonlyTupleOf<T, E> > returns properly named function 2`] = `"isReadonlyTupleOf([(anonymous)], isArrayOf(isString))"`;

snapshot[`isReadonlyTupleOf<T, E> > returns properly named function 3`] = `
"isReadonlyTupleOf([
  isReadonlyTupleOf([
    isReadonlyTupleOf([
      isNumber,
      isString,
      isBoolean
    ], isArray)
  ], isArray)
], isArray)"
`;

snapshot[`isLiteralOf<T> > returns properly named function 1`] = `'isLiteralOf("hello")'`;

snapshot[`isLiteralOf<T> > returns properly named function 2`] = `"isLiteralOf(100)"`;

snapshot[`isLiteralOf<T> > returns properly named function 3`] = `"isLiteralOf(100n)"`;

snapshot[`isLiteralOf<T> > returns properly named function 4`] = `"isLiteralOf(true)"`;

snapshot[`isLiteralOf<T> > returns properly named function 5`] = `"isLiteralOf(null)"`;

snapshot[`isLiteralOf<T> > returns properly named function 6`] = `"isLiteralOf(undefined)"`;

snapshot[`isLiteralOf<T> > returns properly named function 7`] = `"isLiteralOf(Symbol(asdf))"`;

snapshot[`isTupleOf<T, E> > returns properly named function 1`] = `
"isTupleOf([
  isNumber,
  isString,
  isBoolean
], isArray)"
`;

snapshot[`isTupleOf<T, E> > returns properly named function 2`] = `"isTupleOf([(anonymous)], isArrayOf(isString))"`;

snapshot[`isTupleOf<T, E> > returns properly named function 3`] = `
"isTupleOf([
  isTupleOf([
    isTupleOf([
      isNumber,
      isString,
      isBoolean
    ], isArray)
  ], isArray)
])"
`;

snapshot[`isUniformTupleOf<T> > returns properly named function 1`] = `"isUniformTupleOf(3, isAny)"`;

snapshot[`isUniformTupleOf<T> > returns properly named function 2`] = `"isUniformTupleOf(3, isNumber)"`;

snapshot[`isUniformTupleOf<T> > returns properly named function 3`] = `"isUniformTupleOf(3, (anonymous))"`;

snapshot[`isTupleOf<T> > returns properly named function 1`] = `
"isTupleOf([
  isNumber,
  isString,
  isBoolean
])"
`;

snapshot[`isTupleOf<T> > returns properly named function 2`] = `"isTupleOf([(anonymous)])"`;

snapshot[`isTupleOf<T> > returns properly named function 3`] = `
"isTupleOf([
  isTupleOf([
    isTupleOf([
      isNumber,
      isString,
      isBoolean
    ])
  ])
])"
`;
